specs/blueprints/errors/parsing/section_level_skip.eno
# Starting a section two levels deeper than the current one

-- input
# section
### subsubsection
-- input

## ParseError

-- text
The section in line 2 is more than one level deeper than the one it is contained in.
-- text

-- snippet
   Line | Content
 *    1 | # section
 >    2 | ### subsubsection
-- snippet

selection: [1,0] => [1,17]

# Starting the first section in the document at a deep level

-- input
### section
-- input

## ParseError

-- text
The section in line 1 is more than one level deeper than the one it is contained in.
-- text

-- snippet
   Line | Content
 >    1 | ### section
-- snippet

selection: [0,0] => [0,11]
